# particle_life

./: Cargo.toml  justfile  readme.md
assets/: compute.wgsl  draw.wgsl  functions.wgsl  particle.wgsl  prefix_sum.wgsl  types.wgsl
src/: camera.rs  compute.rs  data.rs  draw.rs  events.rs  main.rs  spatial.rs  ui.rs  vello_utils.rs
