[package]
name = "bevy_particle_life"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
bevy = { version = "0.14.1" }
bevy_egui = "0.29.0"
bevy_mod_debugdump = "0.11.1"
rand = "0.8.5"
rayon = "1.10.0"

[features]
default = ["hot-reload"]
hot-reload = ["bevy/file-watcher"]
