[package]
name = "bevy_particle_life"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 2

[dependencies]
bevy = { version = "0.14.1" }
bevy_egui = { version = "0.29.0", features = ["manage_clipboard"] }
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

[features]
default = ["hot-reload"]
hot-reload = ["bevy/file_watcher"]
